# windows-clean

./: .env.example  .gitignore  AGENT_DESIGN.md  LICENSE  NATIVE_BETA_DISTRIBUTION.md  PUBLIC_RELEASE_RESEARCH.md  README.md  RELEASE.md  WINDOWS_HANDOFF.md  WINDOWS_REAL_DATA_SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.mjs
scripts/: arm-route.mjs  inspect-spaceguard-fixtures.ps1  run-demo-rehearsal.mjs  run-first-route-completion-check.mjs  run-first-route-preflight-check.mjs  run-first-route-proof-windows.ps1  run-first-route-proof.mjs  run-native-executor-coverage.mjs  run-native-readonly-rehearsal.mjs  run-openai-advisor-smoke.mjs  run-private-demo-readiness.mjs  run-private-demo-windows-preflight.ps1  run-private-v1-proof-check.mjs  run-private-v1-windows-proof.ps1  run-route-completion-check.mjs  run-route-contract-audit.mjs  run-route-preflight-check.mjs  run-route-proof-windows.ps1  run-setup-doctor.mjs  run-setup-route.mjs  run-support-bundle.mjs  run-v1-proof-check.mjs  run-v1-readiness.mjs  run-v1-windows-preflight.ps1  run-v1-windows-proof.ps1  run-windows-dev.mjs  run-windows-readiness.mjs  run-windows-validation-packet.mjs  run-workflow-proof-check.mjs  seed-spaceguard-fixtures.ps1
src/: App.jsx  index.css  native-scanner.mjs  openai-agent.mjs  real-workflow.mjs  route-boundary-contracts.mjs  spaceguard-model.mjs  treemap.mjs  workflow-proof-check.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: demo-rehearsal.test.js  first-route-completion-check.test.js  first-route-preflight-check.test.js  first-route-proof.test.js  first-route-windows-runner.test.js  guardrails.test.js  treemap.test.js  (+27 more)
(+10 files in other folders)
