[package]
name = "spaceguard"
version = "0.1.0"
description = "Read-only Windows space recovery scanner shell."
authors = ["SpaceGuard"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
