[package]
name = "spaceguard"
version = "0.1.0"
description = "Read-only Windows space recovery scanner shell."
authors = ["SpaceGuard"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["charset", "http2", "json", "rustls-no-provider", "system-proxy"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
