[package]
name = "spaceguard"
version = "0.2.0"
description = "Developer junk cleaner for Windows — safely removes caches, temp files, and stale build artifacts."
authors = ["SpaceGuard"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rayon = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["charset", "http2", "json", "rustls-no-provider", "system-proxy"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
